// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Text Field utils should match snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth"
    data-testid="testID"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
      data-shrink="true"
      for="input-undefined"
    >
      test-label
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
      label="test-label"
    >
      <input
        aria-describedby="helptext-undefined"
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
        id="input-undefined"
        type="password"
        value="test"
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
      >
        <button
          aria-label="toggle password visibility"
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="toggle-password-display-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <img
              alt=""
              data-testid="hide-password-img"
              src="/static/eye-inactive.svg"
            />
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-78 MuiOutlinedInput-notchedOutline"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-79"
          style="width: 0px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
    <div
      aria-live="polite"
    >
      <p
        class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
        id="helptext-undefined"
      >
        helperText
      </p>
    </div>
  </div>
</div>
`;

exports[`render Text Field utils should match snapshot when error is a string 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth"
    data-testid="testID"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-error Mui-error MuiFormLabel-filled"
      data-shrink="true"
      for="input-undefined"
    >
      test-label
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
      label="test-label"
    >
      <input
        aria-describedby="helptext-undefined"
        aria-invalid="true"
        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
        id="input-undefined"
        type="password"
        value="test"
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
      >
        <button
          aria-label="toggle password visibility"
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="toggle-password-display-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <img
              alt=""
              data-testid="hide-password-img"
              src="/static/eye-inactive.svg"
            />
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-361 MuiOutlinedInput-notchedOutline"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-362"
          style="width: 0px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
    <div
      aria-live="polite"
    >
      <p
        class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled"
        id="helptext-undefined"
      >
        Invalid value
      </p>
    </div>
  </div>
</div>
`;

exports[`render Text Field utils should match snapshot when error with error message 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth"
    data-testid="testID"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-error Mui-error MuiFormLabel-filled"
      data-shrink="true"
      for="input-undefined"
    >
      test-label
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
      label="test-label"
    >
      <input
        aria-describedby="helptext-undefined"
        aria-invalid="true"
        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
        id="input-undefined"
        type="password"
        value="test"
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
      >
        <button
          aria-label="toggle password visibility"
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="toggle-password-display-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <img
              alt=""
              data-testid="hide-password-img"
              src="/static/eye-inactive.svg"
            />
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-264 MuiOutlinedInput-notchedOutline"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-265"
          style="width: 0px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
    <div
      aria-live="polite"
    >
      <p
        class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled"
        id="helptext-undefined"
      >
        error
      </p>
    </div>
  </div>
</div>
`;

exports[`render Text Field utils should match snapshot when error without error message 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth"
    data-testid="testID"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-error Mui-error MuiFormLabel-filled"
      data-shrink="true"
      for="input-undefined"
    >
      test-label
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
      label="test-label"
    >
      <input
        aria-describedby="helptext-undefined"
        aria-invalid="true"
        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
        id="input-undefined"
        type="password"
        value="test"
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
      >
        <button
          aria-label="toggle password visibility"
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="toggle-password-display-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <img
              alt=""
              data-testid="hide-password-img"
              src="/static/eye-inactive.svg"
            />
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-175 MuiOutlinedInput-notchedOutline"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-176"
          style="width: 0px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
    <div
      aria-live="polite"
    />
  </div>
</div>
`;

exports[`render Text Field utils should match snapshot when password should be displayed as text 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth"
    data-testid="testID"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
      data-shrink="true"
      for="input-undefined"
    >
      test-label
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
      label="test-label"
    >
      <input
        aria-describedby="helptext-undefined"
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
        id="input-undefined"
        type="text"
        value="test"
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
      >
        <button
          aria-label="toggle password visibility"
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="toggle-password-display-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <img
              alt=""
              data-testid="display-password-img"
              src="/static/eye-active.svg"
            />
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-458 MuiOutlinedInput-notchedOutline"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-459"
          style="width: 0px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
    <div
      aria-live="polite"
    >
      <p
        class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
        id="helptext-undefined"
      >
        helperText
      </p>
    </div>
  </div>
</div>
`;
